# secret-santa-tgbot

./: README.md  pyproject.toml
assets/: __main__.py  secret_santa.py  secret_santa_loader.py
assets/data/: config.py
assets/handlers/: __init__.py
assets/handlers/users/: __init__.py  create_lobby.py  error.py  help.py  join_lobby.py  menu.py  my_lobbies.py  start.py
assets/keyboards/default/: __init__.py  kb_lobby.py  kb_menu.py
assets/keyboards/inline/: __init__.py  ikb_admin_menu_lobby.py  ikb_menu_lobby.py
assets/middlewares/: __init__.py
assets/states/: __init__.py  create_lobby_states.py  join_lobby_states.py  view_lobby_state.py
assets/storage/: lobbies.py  lobby.py
assets/utils/: notify_admins.py  set_bot_commands.py
assets/utils/misc/: __init__.py
