[tool.poetry]
name = "secret-santa-tgbot"
version = "0.1.0"
description = ""
authors = ["Namxobick <andreyyurin@icloud.com>"]
readme = "README.md"
packages = [{include = "secret_santa_tgbot"}]

[tool.poetry.dependencies]
python = "3.10.7"
loguru = "^0.6.0"
aiogram = "^2.23.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
